# s1-clone

./: .env  .gitignore  .pre-commit-config.yaml  README.md  README_KO.md  pyproject.toml  requirements.txt
data/: add_aime.py  collect_data.py  configuration.py  constants.py  difficulty_classify.py  featurization.py  filter.py  fix_gpqa.py  generate_reasoning.py  grading.txt  inference_utils.py  msc.json  official_59k.ipynb  processing.py  tokenization.py  utils.py
results/difficulty_classification/: Qwen_Qwen2_5_32B_Instruct.json  Qwen_Qwen2_5_7B_Instruct.json
results/difficulty_classification/Qwen_Qwen2_5_32B_Instruct/: inference_output.json
results/difficulty_classification/Qwen_Qwen2_5_32B_Instruct/grading_input/: 29bc74fba8ab3919.json  6c74e54b28552f7a.json  87ba285650cb6618.json  c17f45f815a397c6.json
results/difficulty_classification/Qwen_Qwen2_5_7B_Instruct/: inference_output.json
results/difficulty_classification/Qwen_Qwen2_5_7B_Instruct/grading_input/: 29bc74fba8ab3919.json  6c74e54b28552f7a.json  87ba285650cb6618.json  c17f45f815a397c6.json
results/difficulty_classification/deepseek_ai_DeepSeek_R1_Distill_Qwen_32B/grading_input/: 29bc74fba8ab3919.json  6c74e54b28552f7a.json  87ba285650cb6618.json  c17f45f815a397c6.json
results/reasoning/deepseek-ai/DeepSeek-R1-Distill-Qwen-32B/: 01d9b6b384810d00.json  1b48a8d42989ef37.json  24d1af6d363d73cc.json  29bc74fba8ab3919.json  31d543e1fd32b422.json  6c74e54b28552f7a.json  (+6 more)
scripts/: difficulty_classify.sh  generate_reasoning.sh  sft.sh  vllm_deepseek.sh
train/: fsdp_config_qwen_cpu.json  sft.py
