[project]
name = "s1-clone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.46.0",
    "datasets>=3.3.2",
    "pillow>=11.1.0",
    "python-dotenv>=1.0.1",
    "setuptools>=75.8.0",
    "torch>=2.5.1",
    "tqdm>=4.67.1",
    "transformers>=4.49.0",
    "vllm>=0.7.3",
]

[dependency-groups]
dev = [
    "coverage>=7.6.12",
    "ipykernel>=6.29.5",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "ruff>=0.9.7",
]
